fix(pagination): ignore whitespace between `<li>`s
...based on [1]. I am by no means a web developer expert these days, but
adding `display: flex` seem to ignore the whitespace. Also ChatGPT tols
me to add `justify-content: center` to make the `<ul>` element presented
centered.

This commit does _not_ fix [2], but it recreates the issue for
`localhost` (`hugo server serve`) such that I can actually fix the bug.

[1] https://stackoverflow.com/a/14173761
[2] https://github.com/luizdepra/hugo-coder/issues/837

--- a/assets/scss/_pagination.scss
+++ b/assets/scss/_pagination.scss
@@ -1,4 +1,7 @@
 .pagination {
+  display: flex;
+  justify-content: center;
+
   margin-top: 6rem;
   text-align: center;
   font-family: $font-family;
